[package]
name = "pmwiki-nom"
version = "0.1.0"
authors = ["chidea","xfnw"]
edition = "2021"
license = "MIT"
description = "Pmwiki markup language parser library by nom"
repository = "https://github.com/xfnw/pmwiki-nom"
readme = "README.md"
keywords = ["wiki", "markdown", "parser", "pmwiki", "nom"]
categories = ["parser-implementations"]
exclude = [ "*.sh", "*.ps1" ]

[features]
extended = ["link-button", "font-color", "fold"]
link-button = []
font-color = []
fold = []

[dependencies]
nom = "7"
log = "0"
serde = {version="1", features=["derive"]}

[dev-dependencies]
env_logger = "0"
